# rpi_robotics_work

./: .notes.txt.swp  README.md  core  lib_robotis.py  move_both_finger.py  notes.txt  parts_to_buy.txt  takktile.ino
TrackingToolsServer/StreamMarkers/: StreamMarkers.sln
catkin_workspace/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
design_notes/: visual_servoing.txt
gatech_powerball_port/: core
gatech_powerball_port/ach/: Makefile  Makefile.in  ach  ach-example  ach.lo  ach.pc  achbench  achcat  achcop  achcpp.lo  achd  achlog  achtest  achutil.lo  aclocal.m4  canceltest  config.h  config.h.in  config.status  configure  cpptest  libach.la  libachcpp.la  libachj.la  libachj_la-achj.lo  libachutil.la  libtool  org_golems_ach_Lib.h  pipe.lo  robusttest
gatech_powerball_port/amino/: Makefile  Makefile.in  aa_fuzz  aa_regress  aa_test  aclocal.m4  amino_la.mod  amino_mem.mod  amino_tf.mod  config.h  config.h.in  config.status  configure  la_mod.f90  la_mod.lo  la_test  libamino.la  libamino_la.la  libamino_mem.la  libamino_tf.la  libamino_xerbla_nop.la  libaminoj.la  libtestutil.la  libtool  mem_mod.f90  mem_mod.lo  org_golems_amino_Lib.h  q_test  testcpp  tf_mod.f90  tf_mod.lo
gatech_powerball_port/documentation/: notes.txt
gatech_powerball_port/netcanft/: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  cftd  config.h  config.h.in  config.status  configure  netcan_stop.sh  plot_everything.sh  plot_torques.sh
gatech_powerball_port/reflex/: Makefile  Makefile.in  aclocal.m4  cartpend  config.h  config.h.in  config.status  configure  libreflex.la  libreflex_mod.la  libtool  lqgtest  plot_test  reflex.mod  reflex_mod.f90  reflex_mod.lo  rfx-camcal  rfx-trajgen  test-tf-filter
gatech_powerball_port/sns/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  core  daemon.lo  libsns.la  libsns_msg_joystick.la  libsns_msg_joystick_la-msg_plugin.lo  libsns_msg_motor_ref.la  libsns_msg_motor_ref_la-msg_plugin.lo  libsns_msg_motor_state.la  libsns_msg_motor_state_la-msg_plugin.lo  libsns_msg_tf.la  libsns_msg_tf_dx.la  libsns_msg_tf_dx_la-msg_plugin.lo  libsns_msg_tf_la-msg_plugin.lo  libsns_msg_vector.la  libsns_msg_vector_la-msg_plugin.lo  libsns_msg_wt_tf.la  libsns_msg_wt_tf_la-msg_plugin.lo  libtool  msg.lo  sns-trylock  snsdump  snslog  snslogd  snsplot  snsref
gatech_powerball_port/socanmatic/: Makefile  Makefile.am  Makefile.in  aclocal.m4  can402  canmat  config.h  (+22 more)
matlab_workspaces/: powerball_inverse_kinematics_workspace.mat
powerball_joint_data/: joint_4_velocity_position.txt  joint_7_velocity_position.txt
powerball_software/: powerball_script.sh
powerball_software/netcanft/: COPYING  Makefile  configure.ac  dump_readings.sh  netcan_start.sh  netcanft_baud.sh  plot_forces.sh
powerball_software/netcanft/git/: config  index
powerball_software/netcanft/git/refs/heads/: master
powerball_software/netcanft/src/: ftd.c
powerball_solution_inverse_kinematics/: powerball_IK.m  powerball_inverse_kinematics.m
rpi_twiki_personal_page/: index.html
schunk_robots/: .rosinstall
server_code/: .testclient.cpp.swp  Makefile  server  server.cpp  testclient  testclient.cpp
vagrant_boxes/: Vagrantfile  bootstrap.sh
(+1295 files in other folders)
